--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,6 +7,11 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+        apps:
+        required: true
+        type: string
+        default: 'Capital, Capital Xtra'
   
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
