--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,25 +18,28 @@ jobs:
       - name: Generate Matrix
         run: |
           BRANDS=$(echo "${{ github.event.inputs.brands }}" | perl -p -e "s/,/\",\"/g" | sed 's/^/[\"/g' | sed 's/$/\"]/g')
-          echo ::set-output name=brands::${BRANDS}
+          echo ${BRANDS}
 
- my_echo:
-    runs-on: ubuntu-latest
-    needs:
-      - generate_matrix
-    steps:
-      - name: Echo previous outputs
-        run: echo "${{ toJSON(needs.generate_matrix.outputs) }}"
 
-  my_matrix:
-    runs-on: ubuntu-latest
-    needs:
-      - my_echo
-      - generate_matrix
-    strategy:
-      matrix:
-        brand: ${{ fromJSON(needs.generate_matrix.outputs.brands) }}
-    steps:
-      - name: Matrix => (${{ matrix.brand }})
-        run: |
-          echo ${{ matrix.brand }}
+# echo ::set-output name=brands::${BRANDS}
+
+#  my_echo:
+#     runs-on: ubuntu-latest
+#     needs:
+#       - generate_matrix
+#     steps:
+#       - name: Echo previous outputs
+#         run: echo "${{ toJSON(needs.generate_matrix.outputs) }}"
+
+#   my_matrix:
+#     runs-on: ubuntu-latest
+#     needs:
+#       - my_echo
+#       - generate_matrix
+#     strategy:
+#       matrix:
+#         brand: ${{ fromJSON(needs.generate_matrix.outputs.brands) }}
+#     steps:
+#       - name: Matrix => (${{ matrix.brand }})
+#         run: |
+#           echo ${{ matrix.brand }}
