--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,9 +26,9 @@ jobs:
         date >> asd
         git add .
         git commit -m "Asd" --author="Jenkins <jenkins@ci.local>"
-        git push head
+        git push head --author="Jenkins <jenkins@ci.local>"
         git tag ios-${{ github.event.inputs.version }} --author="Jenkins <jenkins@ci.local>"
-        git push ios-${{ github.event.inputs.version }}
+        git push ios-${{ github.event.inputs.version }} --author="Jenkins <jenkins@ci.local>"
 
   generate_matrix:
     runs-on: ubuntu-latest
