--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,13 @@ jobs:
     - name: Create tag ${{ github.event.inputs.version }}
       run: |
         date >> asd
+        git config user.email "jenkins@ci.local"
+        git config user.name "Jenkins"
         git add .
-        git commit -m "Asd" --author="Jenkins <jenkins@ci.local>"
-        git push head --author="Jenkins <jenkins@ci.local>"
-        git tag ios-${{ github.event.inputs.version }} --author="Jenkins <jenkins@ci.local>"
-        git push ios-${{ github.event.inputs.version }} --author="Jenkins <jenkins@ci.local>"
+        git commit -m "Asd"
+        git push head
+        git tag ios-${{ github.event.inputs.version }}
+        git push ios-${{ github.event.inputs.version }}
 
   generate_matrix:
     runs-on: ubuntu-latest
